# ai-app-team-SmartBites

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  services_and_tools_summary.md  streamlit_app.py  team_architecture_plan.md
archive/calls/: experiences.py
archive/notebooks/: 02_tools_testing.ipynb  04_testing_database.ipynb
archive/scripts/: check_workspace.py
archive/streamlit-LIXO/: login.py
archive/streamlit_mariana/: id_signed_in.py  main.py
archive/tests/: test_add_ingredients_prompt.py  test_ate_item_prompt.py  test_cooking_helper_prompt.py  test_mealplan_generation_prompt.py  test_modify_meal_plan_prompt.py  test_receipt_processing_prompt.py  test_shopping_list_prompt.py  (+1 more)
calls/: database_config.py  db_connection.py  supabase_config.py
data/: calendar.ics
docs/: ARCHITECTURE.md  NOTES.md
notebooks/: 00_EnvironmentSetup.ipynb  00_environment_setup.ipynb  01_receipt_parsing.ipynb  01_tools_testing.ipynb  02_tools_testing.ipynb  03_meal_plan_demo.ipynb  04_testing_database.ipynb  05_adding_to_pantry.ipynb  06_services_testing.ipynb  example.ipynb  receipt_parsing.ipynb
project-env/: pyvenv.cfg
project-venv/: pyvenv.cfg
scripts/: check_workspace.py  run_migrations.py  test_supabase.py
src/: ai_client.py  authentication.py
streamlit/: App.py  Hello.py  login.py
streamlit_bea/: App.py  README.md  _common.py
streamlit_copy/: App.py
tests/: conftest.py  example.ipynb  test_pantry_service.py  test_services_standardization.py  test_shopping_ingredient.py  test_signup_user.py  test_supabase.py  test_utils.py
(+131 files in other folders)
